# common

./: .gitignore  CMakeLists.txt  LoggingInterceptor.cc  LoggingInterceptor.h  logging_interceptor.cc  logging_interceptor.h  trace_id_formatter.cc  trace_id_formatter.h
ggg_template_server/: CMakeLists.txt  Makefile  cmd.sh
ggg_template_server/src/: ggg_template_server.cc  ggg_template_service_impl.cc  ggg_template_service_impl.h  ggg_user_service_impl.h
ggg_user_server/: .CMakeLists.txt.swp  .Makefile.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pkg_config  tags
ggg_user_server/src/: .ggg_user_server.cc.swp  .ggg_user_service_impl.cc.swp  .ggg_user_service_impl.h.swp  ggg_user_server.cc  ggg_user_service_impl.cc  ggg_user_service_impl.h
include/: opentelemetry_telemetry_api.h
pkg_config/: ggg_user_server.pb.cc
protos/: .ggg_user_server.proto.swp  CMakeLists.txt  Makefile  ggg_template_server.proto  ggg_user_server.proto
protos_include/: ggg_template_server.grpc.pb.cc  ggg_template_server.grpc.pb.h  ggg_template_server.pb.cc  ggg_user_server.grpc.pb.cc  ggg_user_server.grpc.pb.h  ggg_user_server.pb.h
